<!--
  ~    Copyright 2020 Andrey Mukamolov
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
  <string name="app_name">Bookcrossing</string>
  <string name="package_name" translatable="false">com.bookcrossing.mobile</string>
  <string name="action_settings">Settings</string>
  <string name="mainTitle">Books</string>
  <string name="sign_in_cancelled">Sign in cancelled. Try again.</string>
  <string name="no_internet_connection">Internet connection not available</string>
  <string name="sign_in_failed">Sign in failed. Try again</string>
  <string name="unknown_signin_error">Unknown sign-in error</string>

  <!-- Shortcut strings -->
  <string name="release_shortcut_short_label">Release book</string>
  <string name="release_shortcut_long_label">Release new book</string>
  <string name="release_shortcut_disabled_message">Release unavailable</string>
  <string name="scan_shortcut_long_label">Acquire book by QR code</string>
  <string name="scan_shortcut_short_label">Scan book\'s QR code</string>
  <string name="scan_shortcut_disabled_message">QR code scan unavailable</string>
  <string name="map_shortcut_short_label">Map</string>
  <string name="map_shortcut_long_label">Find books on map</string>
  <string name="map_shortcut_disabled_message">Map unavailable</string>

  <string name="book_acquire">Acquire</string>
  <string name="title_activity_book">Book</string>
  <string name="stash">Stash</string>
  <string name="books_map">Map</string>
  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_close">Close navigation drawer</string>

  <string name="hint_name">Name</string>
  <string name="hint_author">Author</string>
  <string name="add_new_book_title">Release new book</string>
  <string name="cover_description">Book cover</string>
  <string name="hint_description">Describe this book</string>
  <string name="ok" translatable="false">OK</string>

  <string name="book_saved_dialog_title">Book released</string>
  <string name="book_sticker_heading_text">Congratulations! You have found a free book!</string>
  <string name="book_sticker_main_text">
        "I\'m a very special book. I\'m traveling around the world "
        "making new friends. I hope I\'ve met another friend in you.\n"
        "Please install Bookcrossing Android application and mark me as acquired "
        "by entering my code (shown below) or scanning QR code"
    </string>
  <string name="book_sticker_get_app">Don\'t have an app? Don\'t worry, you can download it free on Google Play:</string>
  <string name="sticker_created_info">
        "Sticker for this book was saved in gallery. You can either glue it on the flyleaf or write the code and any other warm words by hand.\n"
        "Sticker will look like this:"
    </string>
  <string name="title_activity_book_acquire">Acquire</string>
  <string name="acquire_a_book_heading">You\'re going to acquire a book</string>
  <string name="book_submit_acquisition">Acquire</string>
  <string name="hint_book_code">Enter book\'s code</string>

  <string name="extra_insideAppRequest" translatable="false">fromInsideAppRequest</string>
  <string name="incorrect_key_message">Incorrect key</string>
  <string name="hint_position">Where did you left this book?</string>
  <string name="default_city">Unknown</string>

  <string name="acquired_books_header">My acquired books</string>
  <string name="release_book">Release</string>
  <string name="action_search_title">Search</string>

  <!-- Algolia credentials -->
  <string name="algolia_app_id" translatable="false">VKN17LOEKJ</string>
  <string name="algolia_api_key" translatable="false">dbb62b00ef8b16504cdbbe14dfe81907</string>
  <string name="algolia_index_name" translatable="false">books</string>
  <string name="title_activity_map">Map</string>

  <!-- Strings related to Settings -->
  <string name="pref_title_default_city">Default city</string>

  <string name="action_logout">Logout</string>
  <string name="action_report">Report abuse</string>
  <string name="timestamp_prefix">Went free&#160;</string>
  <string name="placesHistory_header">Book\'s travels</string>
  <string name="incorrect_code_scanned_message">Scanned code not recognized. Scan code on the flyleaf</string>
  <string name="scan_code_button_text">Scan QR code</string>
  <string name="title_activity_scan">Scan book code</string>
  <string name="scan_activity_initial_message">Scan code on the flyleaf</string>
  <string name="filler_position">Somewhere</string>
  <string name="failed_to_load_book_message">Failed to load book. Try again later</string>
  <string name="error_dialog_title">Failed to load</string>
  <string name="failed_to_release_book_message">Failed to release book. Maybe you have entered incorrect names or something happened on the server. Try again later.</string>
  <string name="failed_to_load_books_message">Books\' locations unavailable. Try again later</string>

  <string name="rendered_sticker_name">Book sticker</string>
  <string name="rendered_sticker_description">Glue it on the flyleaf</string>
  <string name="profileTitle">Profile</string>
  <string name="profile">Profile</string>
  <string name="title_activity_oss_licenses">Open source licenses</string>
  <string name="city_hint">Enter your city</string>
  <string name="enter_city_title">Enter your city</string>
  <string name="error_enter_city_content">There was an error with receiving your city. Please enter it manually, so we can automatically detect book\'s coordinates where you freed it</string>

  <string name="consent_preference_not_set">Not set</string>

  <string name="consent_preference_non_personalized">Do not personalize ads</string>
  <string name="consent_preference_personalized">Personalize ads</string>
  <string name="pref_title_ads_consent">Ads consent</string>
  <string name="cover_chooser_title">Choose source</string>
  <string name="release_book_dialog_title">Specify new book\'s position</string>
  <string name="stash_notification_channel">Stashed books updates</string>
  <string name="stash_notification_channel_description">Notifications about the books you\'ve stashed</string>
  <string name="stash_notification_title_acquired">Stashed book acquired</string>
  <string name="stash_notification_body_acquired">One of the books you\'ve stashed was acquired by someone</string>
  <string name="stash_notification_title_free">Stashed book released</string>
  <string name="stash_notification_body_free">One of the books you\'ve stashed was released! Go find it</string>
  <string name="report_abuse_success">Your report was sent. Thanks!</string>
  <string name="unstash_book_confirmation_title">Unstash this book?</string>
  <string name="author_icon_description">Author</string>
  <string name="place_icon_description">Current position</string>
  <string name="book_place_template">%1$s, %2$s</string>
  <string name="camera_permission_denied_prompt">We need camera permission to be able to scan QR code of the book</string>
  <string name="location_permission_denied_prompt">We need location permission to be able to display your location on the map</string>
  <string name="retry_permission_request_action">Retry</string>
  <string name="go_to_settings_permission_request_action">Go to settings</string>
  <string name="error_book_name_malformed">Name contains incorrect symbols</string>
  <string name="error_book_author_malformed">Author\'s name contains incorrect symbols</string>
  <string name="error_book_description_malformed">Description contains incorrect symbols</string>
  <string name="error_book_position_malformed">Book position contains incorrect symbols</string>
  <string name="error_input_incorrect_symbols">Input contains incorrect symbols</string>
  <string name="error_input_empty">Input should not be empty</string>
  <string name="error_too_long">Input is too long</string>
  <string name="error_too_short">Input is too short</string>
  <string name="pick_location_on_map">Pick location on map</string>
  <string name="pick_location_button_text">Pick location</string>
  <string name="sign_in_success">Welcome to Bookcrossing!</string>
  <string name="release_acquired_book_title">You are going to release this book. Please provide the details of the new location where you left this book, so others can find it.</string>
  <string name="release_acquired_book">Release book</string>
  <string name="acquired_books_empty_indicator">No acquired books</string>
  <string name="profile_picture_description">Profile picture</string>
  <string name="book_released_book_message">Successfully released book</string>
  <string name="book_acquired_success_message">Book was successfully acquired. Enjoy!</string>
  <string name="book_location">Book location</string>
  <string name="book_acquire_description">Book code is usually located on the flyleaf of the book. It can be present as text or as QR code on the special sticker</string>
  <string name="incorrect_book_location_message">Location for the book is unavailable</string>
  <string-array name="cover_chooser_dialog_items">
    <item>From gallery</item>
    <item>From camera</item>
  </string-array>
</resources>
