<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2019 Andrey Mukamolov
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
  <shortcut
    android:enabled="true"
    android:icon="@drawable/ic_scan_qrcode_shortcut"
    android:shortcutDisabledMessage="@string/scan_shortcut_disabled_message"
    android:shortcutId="scan"
    android:shortcutLongLabel="@string/scan_shortcut_long_label"
    android:shortcutShortLabel="@string/scan_shortcut_short_label">
    <intent
      android:action="android.intent.action.VIEW"
      android:targetClass="com.bookcrossing.mobile.ui.scan.ScanActivity"
      android:targetPackage="com.bookcrossing.mobile" />
  </shortcut>
  <shortcut
    android:enabled="true"
    android:icon="@drawable/ic_release_shortcut"
    android:shortcutDisabledMessage="@string/release_shortcut_disabled_message"
    android:shortcutId="release"
    android:shortcutLongLabel="@string/release_shortcut_long_label"
    android:shortcutShortLabel="@string/release_shortcut_short_label">
    <intent
      android:action="android.intent.action.VIEW"
      android:targetClass="com.bookcrossing.mobile.ui.main.MainActivity"
      android:targetPackage="com.bookcrossing.mobile">
      <extra
        android:name="targetFragment"
        android:value="BookReleaseFragment" />
    </intent>
  </shortcut>
  <shortcut
    android:enabled="true"
    android:icon="@drawable/ic_map_shortcut"
    android:shortcutDisabledMessage="@string/map_shortcut_disabled_message"
    android:shortcutId="map"
    android:shortcutLongLabel="@string/map_shortcut_long_label"
    android:shortcutShortLabel="@string/map_shortcut_short_label">
    <intent
      android:action="android.intent.action.VIEW"
      android:targetClass="com.bookcrossing.mobile.ui.main.MainActivity"
      android:targetPackage="com.bookcrossing.mobile">
      <extra
        android:name="targetFragment"
        android:value="MapsFragment" />
    </intent>
  </shortcut>
</shortcuts>

