<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.bookcrossing.mobile.ui.create.BookCreateFragment"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cover"
        android:visibility="gone"
        android:clickable="true"
        android:src="@drawable/ic_add_a_photo"
        android:contentDescription="@string/cover_description" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_input_padding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_input_padding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_author"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_input_padding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_position"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_input_padding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:maxLines="10"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/publish_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish_book" />
</LinearLayout>
