<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2019 Andrey Mukamolov
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_graph"
  app:startDestination="@id/mainFragment">

  <activity
    android:id="@+id/bookActivity"
    android:name="com.bookcrossing.mobile.ui.bookpreview.BookActivity"
    android:label="activity_book"
    tools:layout="@layout/activity_book">
    <argument
      android:name="key"
      app:argType="string" />
  </activity>
  <activity
    android:id="@+id/mapActivity"
    android:name="com.bookcrossing.mobile.ui.map.MapActivity"
    android:label="activity_map"
    tools:layout="@layout/activity_map" />
  <fragment
    android:id="@+id/mainFragment"
    android:name="com.bookcrossing.mobile.ui.main.MainFragment"
    android:label="@string/mainTitle"
    tools:layout="@layout/fragment_main">
    <action
      android:id="@+id/action_mainFragment_to_bookActivity"
      app:destination="@id/bookActivity"
      app:enterAnim="@anim/fragment_open_enter"
      app:exitAnim="@anim/fragment_open_exit" />
    <action
      android:id="@+id/action_mainFragment_to_mapActivity"
      app:destination="@id/mapActivity" />
    <action
      android:id="@+id/action_mainFragment_to_settingsFragment"
      app:destination="@id/settingsFragment" />
    <action
      android:id="@+id/action_mainFragment_to_profileFragment"
      app:destination="@id/profileFragment" />
    <action
      android:id="@+id/action_mainFragment_to_stashFragment"
      app:destination="@id/stashFragment"
      app:enterAnim="@anim/fragment_fade_enter"
      app:exitAnim="@anim/fragment_fade_exit"
      app:popEnterAnim="@anim/fragment_close_enter"
      app:popExitAnim="@anim/fragment_close_exit" />
    <action
      android:id="@+id/action_mainFragment_pop"
      app:popUpTo="@id/mainFragment"
      app:popUpToInclusive="true" />
    <action
      android:id="@+id/action_mainFragment_self"
      app:destination="@+id/mainFragment"
      app:enterAnim="@anim/fragment_fade_enter"
      app:exitAnim="@anim/fragment_fade_exit"
      app:popEnterAnim="@anim/fragment_fade_enter"
      app:popExitAnim="@anim/fragment_fade_exit" />
    <action
      android:id="@+id/action_mainFragment_to_bookCreateFragment"
      app:destination="@id/bookReleaseFragment"
      app:enterAnim="@anim/fragment_fade_enter"
      app:exitAnim="@anim/fragment_fade_exit" />
    <action
      android:id="@+id/action_mainFragment_to_searchFragment"
      app:destination="@id/searchFragment" />
  </fragment>
  <fragment
    android:id="@+id/bookReleaseFragment"
    android:name="com.bookcrossing.mobile.ui.releasebook.BookReleaseFragment"
    android:label="@string/add_new_book_title"
    tools:layout="@layout/fragment_book_release">
    <action
      android:id="@+id/action_bookCreateFragment_pop"
      app:popUpTo="@id/bookReleaseFragment"
      app:popUpToInclusive="true" />
  </fragment>
  <fragment
    android:id="@+id/settingsFragment"
    android:name="com.bookcrossing.mobile.ui.settings.SettingsFragment"
    android:label="@string/action_settings" />
  <fragment
    android:id="@+id/profileFragment"
    android:name="com.bookcrossing.mobile.ui.profile.ProfileFragment"
    android:label="@string/profileTitle"
    tools:layout="@layout/fragment_profile">
    <action
      android:id="@+id/action_profileFragment_to_releaseAcquiredBookFragment"
      app:destination="@id/releaseAcquiredBookFragment"
      app:enterAnim="@anim/fragment_fade_enter"
      app:exitAnim="@anim/fragment_fade_exit" />
  </fragment>
  <fragment
    android:id="@+id/stashFragment"
    android:name="com.bookcrossing.mobile.ui.stash.StashFragment"
    android:label="@string/stash"
    tools:layout="@layout/fragment_stash" />
  <fragment
    android:id="@+id/searchFragment"
    android:name="com.bookcrossing.mobile.ui.search.SearchFragment"
    android:label="@string/action_search_title"
    tools:layout="@layout/fragment_search_list" />
  <fragment
    android:id="@+id/releaseAcquiredBookFragment"
    android:name="com.bookcrossing.mobile.ui.releasebook.ReleaseAcquiredBookFragment"
    android:label="@string/release_acquired_book"
    tools:layout="@layout/fragment_book_release_acquired">
    <argument
      android:name="key"
      app:argType="string" />
  </fragment>
</navigation>