<!--
  ~    Copyright 2019 Andrey Mukamolov
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/create_book_root"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:animateLayoutChanges="true"
  android:orientation="vertical"
  tools:context="com.bookcrossing.mobile.ui.create.BookReleaseFragment"
  >

  <ImageView
    android:id="@+id/cover"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:contentDescription="@string/cover_description"
    android:focusable="true"
    android:src="@drawable/ic_add_a_photo"
    android:visibility="invisible"
    tools:visibility="visible"
    />

  <com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
    android:id="@+id/input_name_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/text_input_padding"
    app:counterEnabled="true"
    app:counterMaxLength="100"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/input_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_name"
      android:maxLines="1"
      />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
    android:id="@+id/input_author_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/text_input_padding"
    app:counterEnabled="true"
    app:counterMaxLength="100"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/input_author"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_author"
      android:maxLines="1"
      />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
    android:id="@+id/input_position_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/text_input_padding"
    app:counterEnabled="true"
    app:counterMaxLength="100"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/input_position"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_position"
      android:maxLines="1"
      />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
    android:id="@+id/input_description_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/text_input_padding"
    app:counterEnabled="true"
    app:counterMaxLength="100"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/input_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_description"
      android:inputType="textMultiLine"
      android:maxLines="10"
      />
  </com.google.android.material.textfield.TextInputLayout>
  <Button
    style="@style/Widget.MaterialComponents.Button"
    android:id="@+id/publish_book"
    android:enabled="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:text="@string/release_book"
    />
</LinearLayout>
