<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/sticker_created_info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sticker_created_info"
      android:textAlignment="center"
      android:textColor="@color/backgroundDark"
      />

  <LinearLayout
      android:id="@+id/sticker"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:orientation="vertical"
      android:padding="@dimen/sticker_padding"
      >
    <TextView
        android:id="@+id/sticker_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/ic_launcher"
        android:text="@string/book_sticker_heading_text"
        android:textAlignment="center"
        android:textColor="@color/backgroundDark"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/sticker_main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_sticker_main_text"
        android:textAlignment="center"
        android:textColor="@color/backgroundDark"
        />

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/sticker_padding"
        app:srcCompat="@mipmap/ic_launcher"
        />

    <TextView
        android:id="@+id/sticker_book_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/backgroundDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="-KgrkBrUw8OhWlil-LVg"
        />

    <TextView
        android:id="@+id/sticker_get_app_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_sticker_get_app"
        android:textAlignment="center"
        android:textColor="@color/backgroundDark"
        />

    <ImageView
        android:id="@+id/app_link"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_app_link"
        />
  </LinearLayout>

</LinearLayout>
